# SlitherExplorer

./: CMakeLists.txt
sample/: 01.csv  02.csv  03.csv  04.csv
simple/: CMakeLists.txt  definite.cpp  definite.h  localFiles.cpp  localFiles.h  main.cpp  slarray.cpp  slarray.h
src/: definite.cpp  definite.h  localFiles.cpp  localFiles.h  main.cpp  search.cpp  search.h  slarray.h  test.cpp
src/graphic/: imagewriter.cpp  imagewriter.h
src/solve/: checker.cpp  solve.cpp  solve.h  theory.cpp  theory.h
src/util/: fileuser.cpp  fileuser.h  utilarray.cpp  utilarray.h
